# Data-Challenge

./: .gitignore  AI_DISCLOSURE.md  PIPELINE_GUIDE.md  README.md  SUMMARY.md  main_pipeline.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_pipeline.py  setup.sh
config/: pipeline_config.yaml
docs/: AI_USAGE_TEMPLATE.md  API_SPECIFICATION.md  ARCHITECTURE_OVERVIEW.md  CHALLENGE_NOTES_ANALYSIS.md  CLASS_BALANCING_ANALYSIS.md  COMPACTNESS_ANALYSIS.md  CURSOR_RULES_SUMMARY.md  DELIVERABLES_EVALUATION.md  GETTING_STARTED.md  GUARDRAILS_EVALUATION.md  LISTING_TIME_ANALYSIS.md  LISTING_TIME_FIX_SUMMARY.md  PROJECT_STRUCTURE.md  READABILITY_ASSESSMENT.md  REQUIREMENTS.md  ROI_SELECTION_ANALYSIS.md  SCORING_EVALUATION.md  SUMMARY_TEMPLATE.md  TECHNICAL_IMPLEMENTATION.md  TECHNICAL_REQUIREMENTS.md
examples/: README.md  demo_logging_and_progress.py
logs/: data_lineage.jsonl
logs/operations/: data_operations.jsonl
outputs/models/: metadata_logistic_20250903_145731.joblib  model_logistic_20250903_145731.joblib
src/: __init__.py
src/lending_club/: __init__.py  data_pipeline.py  evaluation_pipeline.py  feature_pipeline.py  investment_pipeline.py  model_pipeline.py  reporting.py
src/lending_club/evaluation/: __init__.py
src/lending_club/features/: __init__.py
src/lending_club/models/: __init__.py  data_models.py  enums.py
src/utils/: __init__.py  logging_config.py  progress_tracker.py  validation.py
tests/: __init__.py  conftest.py
tests/integration/: test_end_to_end.py
tests/unit/: test_data_models.py  test_data_pipeline.py  test_feature_pipeline.py  test_investment_pipeline.py
